[gd_scene load_steps=25 format=2]

[ext_resource path="res://calavera.gd" type="Script" id=1]
[ext_resource path="res://Sprites/oc.png" type="Texture" id=2]
[ext_resource path="res://Sprites/2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/7-1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/7.png" type="Texture" id=6]
[ext_resource path="res://Sprites/8-1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/8.png" type="Texture" id=8]
[ext_resource path="res://Sprites/9-1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/9.png" type="Texture" id=10]
[ext_resource path="res://Sprites/4-1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/3-1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/5-1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/5.png" type="Texture" id=14]
[ext_resource path="res://Sprites/4.png" type="Texture" id=15]
[ext_resource path="res://Sprites/3.png" type="Texture" id=16]
[ext_resource path="res://Sprites/IMG-20131013-WA0002.jpg" type="Texture" id=17]
[ext_resource path="res://Fonts/Scary Halloween Font.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://GUI/boton_back.png" type="Texture" id=19]
[ext_resource path="res://GUI/boton_backpressed.png" type="Texture" id=20]

[sub_resource type="Animation" id=1]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("bi:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bd:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]

resource_name = "poseido"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("bi:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 170.0, 170.0, 170.0, 180.0, 170.0, 180.0, 170.0, 170.0, 170.0, 170.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bd:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0, -190.0, -180.0, -190.0, -180.0, -190.0, -180.0, -190.0, -180.0, -190.0, -180.0, -190.0 ]
}

[sub_resource type="DynamicFont" id=3]

size = 39
use_mipmaps = false
use_filter = false
font_data = ExtResource( 18 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 39
use_mipmaps = false
use_filter = false
font_data = ExtResource( 18 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="main" type="Node" index="0"]

[node name="calavera" type="Node2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 2.49377, 120.544 )
script = ExtResource( 1 )

[node name="spr_h" type="Sprite" parent="calavera" index="0"]

position = Vector2( 492.323, 158.378 )
texture = ExtResource( 2 )

[node name="spr_h4" type="Sprite" parent="calavera" index="1"]

position = Vector2( 493.551, 209.943 )
texture = ExtResource( 3 )

[node name="spr_h3" type="Sprite" parent="calavera" index="2"]

position = Vector2( 493.55, 250.458 )
texture = ExtResource( 4 )

[node name="spr_h6" type="Sprite" parent="calavera" index="3"]

position = Vector2( 476.362, 278.696 )
texture = ExtResource( 5 )

[node name="spr_h7" type="Sprite" parent="calavera" index="4"]

position = Vector2( 515.65, 279.924 )
texture = ExtResource( 6 )

[node name="spr_h10" type="Sprite" parent="calavera" index="5"]

position = Vector2( 481.273, 331.489 )
texture = ExtResource( 7 )

[node name="spr_h8" type="Sprite" parent="calavera" index="6"]

position = Vector2( 513.194, 332.717 )
texture = ExtResource( 8 )

[node name="spr_h15" type="Sprite" parent="calavera" index="7"]

position = Vector2( 478.818, 363.41 )
texture = ExtResource( 9 )

[node name="spr_h13" type="Sprite" parent="calavera" index="8"]

position = Vector2( 518.105, 365.866 )
texture = ExtResource( 10 )

[node name="bi" type="Node2D" parent="calavera" index="9"]

editor/display_folded = true
position = Vector2( 464.085, 189.072 )
_sections_unfolded = [ "Transform" ]

[node name="spr_h11" type="Sprite" parent="calavera/bi" index="0"]

position = Vector2( -3.68326, 54.0205 )
texture = ExtResource( 11 )

[node name="spr_h2" type="Sprite" parent="calavera/bi" index="1"]

position = Vector2( -3.05176e-005, 17.1883 )
texture = ExtResource( 12 )

[node name="spr_h12" type="Sprite" parent="calavera/bi" index="2"]

position = Vector2( -3.68326, 84.7139 )
texture = ExtResource( 13 )

[node name="bd" type="Node2D" parent="calavera" index="10"]

editor/display_folded = true
position = Vector2( 518.105, 187.844 )
_sections_unfolded = [ "Transform" ]

[node name="spr_h14" type="Sprite" parent="calavera/bd" index="0"]

position = Vector2( 6.13861, 85.9416 )
texture = ExtResource( 14 )

[node name="spr_h9" type="Sprite" parent="calavera/bd" index="1"]

position = Vector2( 6.13855, 55.2482 )
texture = ExtResource( 15 )

[node name="spr_h5" type="Sprite" parent="calavera/bd" index="2"]

position = Vector2( 2.45532, 17.1883 )
texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="calavera" index="11"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 1 )
anims/poseido = SubResource( 2 )
blend_times = [  ]

[node name="Camera2D" type="Camera2D" parent="." index="1"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="bckg" type="Sprite" parent="." index="2"]

position = Vector2( 510.094, 310.53 )
scale = Vector2( 1.72456, 0.857252 )
z_index = -3
texture = ExtResource( 17 )
_sections_unfolded = [ "Z Index" ]

[node name="n_input" type="TextEdit" parent="." index="3" groups=[
"input",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 431.0
margin_top = 185.0
margin_right = 565.0
margin_bottom = 243.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "00000"
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "custom_fonts" ]

[node name="dial_cal" type="Label" parent="." index="4" groups=[
"diacal",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 221.0
margin_top = 115.0
margin_right = 776.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TextureButton" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 383.0
margin_top = 510.0
margin_right = 609.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="txt_button" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 394.0
margin_top = 521.0
margin_right = 598.0
margin_bottom = 563.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "SIGUIENTE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="button_down" from="TextureButton" to="calavera" method="_on_TextureButton_button_down"]

[connection signal="button_up" from="TextureButton" to="calavera" method="_on_TextureButton_button_up"]


